<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dispatch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ordernew">新订单</string>
    <string name="orderdealed">已处理</string>
    <string name="dispatcherseclect">请选择配送员</string>
    <string name="content_desc"> </string>
    <string name="todaydelivery">今日配送额</string>
	<string name="ordernum">单量</string>
	<string name="ordermoney">货款</string>
	<string name="todayorder">今日订单</string>
	<string name="neworder">新订单</string>
	<string name="dealedorder">已处理</string>
	<string name="orderinfo">订单详情</string>
	<string name="total">合计</string>
	<string name="call">致电询问</string>
	<string name="receive">接单</string>
	<string name="makecalltitle">致电询问</string>
	<string name="monthoverview">当月订单统计</string>
	<string name="ordercntitle">本月单量 </string>
	<string name="paymentitle">未交金额 </string>
	<string name="costtimetitle">平均用时 </string>
	<string name="gradetitle">站内排名 </string>
	<string name="normalordertitle">普通订单 </string>
	<string name="greatersixtytitle">超60分钟</string>
	<string name="appointmentordertitle">预约订单 </string>
	<string name="greatertentitle">超10分钟</string>
	<string name="dayoverview">日订单统计</string>
	<string name="cancelordertitle">取消单量</string>
	<string name="dayordercntitle">日单量</string>
	
</resources>
