<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/backdefault">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/lightblue">
        
        <TextView 
            android:id="@+id/tv_deliveryer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>
        
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white">
        
        <ImageView 
            android:id="@+id/iv_chart"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/content_desc"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/chart"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/iv_chart"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/todaydelivery"/>
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white">
        
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:padding="10dp">
            
            <TextView 
                android:id="@+id/tv_ordernum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightyellow"
                android:layout_gravity="center_horizontal"
                android:textSize="22sp"/>
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/lightlinear"
                android:textSize="14sp"
                android:text="@string/ordernum"/>
            
        </LinearLayout>
        
        <ImageView 
            android:id="@+id/iv_vertivaline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/verticaline"/>
        
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:padding="10dp">
            
            <TextView 
                android:id="@+id/tv_ordermoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightyellow"
                android:layout_gravity="center_horizontal"
                android:textSize="22sp"/>
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightlinear"
                android:layout_gravity="center_horizontal"
                android:textSize="14sp"
                android:text="@string/ordermoney"/>
            
        </LinearLayout>
        
    </LinearLayout>
    
    <ListView 
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white">
        
    </ListView>
    

</LinearLayout>
